[package]
name = "project1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
regex = { git = "https://github.com/rust-lang/regex.git", tag = "1.0.0" }
rustls = "0.22.2"
webpki-roots = "0.26.0"